--- a/streaming-service/package.json
+++ b/streaming-service/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/node": "^18.13.0",
     "@types/ws": "^8.5.4",
+    "prettier": "2.8.4",
     "typescript": "^4.9.5"
   },
   "scripts": {
