--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      
+
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
@@ -17,5 +17,17 @@ jobs:
       - run: bats -v
 
   linting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install
+        run: npm install
+      - name: Lint
+        run: npm run lint
+
   unit-testing:
+    runs-on: ubuntu-latest
+
+
   build-docker:
+    runs-on: ubuntu-latest
