--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.10"
+  },
+  "scripts": {
+    "lint": "eslint.js"
   }
 }
