--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,4 +16,8 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
 
-  
+  linting:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Lint 
+        run: npm run lint
