--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2"
+  },
+  "scripts": {
+    "lint": "eslint ."
   }
 }
