--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,5 +20,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Lint 
-        run: cd ./DAQ-Technical-Assessment
+        run: cd ~/home/runner/work/DAQ-Technical-Assessment/
         run: npm run lint
