--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,4 +20,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Lint 
-        run: npm --prefix ../home/runner/work/DAQ-Technical-Assessment lint
+        run: npm --prefix ../home/runner/work/DAQ-Technical-Assessment run lint
