--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,45 +1,44 @@
-name: ci-cd pipeline
+name: CI/CD Pipeline
 
 on:
-  [push]
+  push:
+    branches: [ main ]
+
+env:
+  DOCKER_IMAGE_NAME: daq-tech-assessment
+  DOCKER_IMAGE_TAG: latest
 
 jobs:
-  check-bats-version:
+  lint-and-test:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
-
-   build:
-    runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v2
-
+        uses: actions/checkout@v2
+      
+      - name: Install dependencies
+        run: npm install
+      
       - name: Linting
-      - run: npm run lint
+        run: npm run lint
+        
+      - name: Unit Testing
+        run: npm test
 
-      - name: Unit testing
-      - run: npm test
-
-    build-and-push:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout code
-        - uses: actions/checkout@v2
-        - name: Login to Docker Hub
-        - uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Build and push Docker image
-        - uses: docker/build-push-action@v2
-          with:
-            context: .
-            push: true
-            tags: vivianchengg/daq-tech-assessment:latest
+  build-and-push:
+    needs: lint-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Build Docker image
+        run: docker build -t $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG .
+      
+      - name: Push Docker image
+        run: docker push $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG
