--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.10"
+    "@mui/material": "^5.11.10",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.53.0",
