--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "react"
+        "react-app"
     ],
     "overrides": [
     ],
