--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5"
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest --passWithNoTests"
   }
 }
