--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
